--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,1 +1,9 @@
-{{% extends "base.html" %}}
+{% extends "base.html" %}
+
+{% block content %}
+    <title>Rolsa Technologies</title>
+{% endblock %}
+
+{% block content %}
+    <h1>Welcome</h1>
+{% block content %}
