--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
 
         <!-- Footer -->
         <footer class="bg-dark text-white text-center py-3 mt-5">
-            <p>&copy; 2025 Seasonal Travel. All rights reserved.</p>
+            <p>&copy; 2025 Rolsa Technologies. All rights reserved.</p>
         </footer>
     </div>
 
