--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,5 +4,9 @@
     <title>Rolsa Technologies</title>
 
     
-    <h1>Welcome</h1>
+    <h1>Rolsa Technologies</h1>
+
+    <div class="card">
+        <h1>card test</h1>
+    </div>
 {% endblock %}
