--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
   <div class="container-fluid">
 
     <!-- Brand on the LEFT -->
-    <a class="navbar-brand fw-bold" href="#">Rolsa Technologies</a>
+    <img class = "logo">
 
     <!-- Mobile Toggle Button -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#rolsaNavbar"
