--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
   <div class="container-fluid">
 
     <!-- Brand on the LEFT -->
-    <img class = "logo">
+    <img src="images/logo.png" alt="Rolsa Technologies Logo" width="200">
 
     <!-- Mobile Toggle Button -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#rolsaNavbar"
