--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -3,10 +3,13 @@
 {% block content %}
     <title>Rolsa Technologies</title>
 
-    
     <h1>Rolsa Technologies</h1>
 
-    <div class="card">
-        <h1>card test</h1>
+    <div class="container-fluid-hero">
+        <img src="/static/images/solar_panels.jpg" class="hero-element">
     </div>
+
+    
+
+
 {% endblock %}
