--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
-{% block content %}
-    <title>Rolsa Technologies</title>
+{% block content %}<title>Rolsa Technologies</title>
 
+    
     
     <h1>Welcome</h1>
 {% endblock %}
