--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,13 +72,13 @@
             <div class="container">
                 <span>&copy; 2025 Rolsa Technologies</span>
                 <span class="mx-2">|</span>
-                <a href="{{ url_for('main.privacy') }}" class="text-decoration-none text-light">
-                    Privacy & Cookies
-                </a>
+                <a href="#" id="policy-link">Policies</a>
             </div>
         </footer>
-    </div>
 
+    </div>
+    <!-- Load your JS after the footer -->
+    <script src="static\js\policy.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
