--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,8 +54,8 @@
 
       <!-- Right Side (Account) -->
       <div class="d-flex">
-        <a href="#" class="btn btn-outline-light me-2">Login</a>
-        <a href="#" class="btn btn-light text-success">Register</a>
+        <a href="{{ url_for('login') }}" class="btn btn-outline-light me-2">Login</a>
+        <a href="{{ url_for('register') }}" class="btn btn-light text-success">Register</a>
       </div>
 
     </div>
