--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
 
     <!-- Brand on the LEFT -->
 
-    <a href="{{ url_for('main.index') }}">
+    <a href="{{ url_for('home') }}">
     <img src="{{ url_for('static', filename='images/logo.png') }}" 
          alt="Rolsa Technologies Logo" 
          width="200">
