--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,6 +7,6 @@
     <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
     <p>
         Forgot Your Password?
-        <a href="{{ url_for('home') }}">Click to Reset It</a>
+        <a href="{{ url_for('dashboud') }}">Click to Reset It</a>
     </p>
 {% endblock %}
