--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,8 +54,13 @@
 
       <!-- Right Side (Account) -->
       <div class="d-flex">
+        {% if current_user.is_anonymous %}
         <a href="{{ url_for('login') }}" class="btn btn-outline-light me-2">Login</a>
+        
         <a href="{{ url_for('register') }}" class="btn btn-light text-success">Register</a>
+        {% else %}
+        <a href ="{{ url_for('logout') }}" class="btn btn-outline-light me-2">Logout</a>
+        {% endif %}
       </div>
 
     </div>
