--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,7 +42,7 @@
           <a class="nav-link" href="#">Green Products</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Carbon Calculator</a>
+          <a class="nav-link" href="{{ url_for('calculate') }}">Carbon Calculator</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Book a Consultation</a>
@@ -84,6 +84,7 @@
     </div>
     <!-- Load your JS after the footer -->
     <script src="static\js\policy.js"></script>
+    <script src="static\js\cookies.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
