--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -40,8 +40,8 @@
                             </div>
 
                             <div class="d-flex justify-content-between">
-                                <small>New user? <a href="{{ url_for('register') }}">Click to Register!</a></small>
-                                <small>Forgot? <a href="{{ url_for('reset_password') }}">Click to Reset</a></small>
+                                <small>New user? <a href="{{ url_for('main.register') }}">Click to Register!</a></small>
+                                <small>Forgot? <a href="{{ url_for('main.reset_password') }}">Click to Reset</a></small>
                             </div>
 
                         </form>
