--- a/app/templates/carbon_calculator.html
+++ b/app/templates/carbon_calculator.html
@@ -4,7 +4,7 @@
     <h1>Calculate Carbon Footprint</h1>
     <div class="container mt-4">
         <h1 class="mb-4">Booking Form</h1>
-        <form action="{{ url_for('calculate') }}" method="post" novalidate>
+        <form action="{{ url_for('main.calculate') }}" method="post" novalidate>
             {{ form.csrf_token }}
             <div class="mb-3">
                 {{ form.car_emission.label(class="form-label") }}
@@ -27,7 +27,7 @@
             </div>
         </form>
         <div class="d-flex gap-2 py-3">
-            <a href="{{ url_for('home') }}" class="btn btn-primary">Cancel</a>
+            <a href="{{ url_for('main.home') }}" class="btn btn-primary">Cancel</a>
         </div>
     </div>
 {% endblock %}
