--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,16 +39,16 @@
           <a class="nav-link active" href="{{ url_for('main.home') }}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Green Products</a>
+          <a class="nav-link" href="{{ url_for('main.green_products')}}">Green Products</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('main.calculate') }}">Carbon Calculator</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Book a Consultation</a>
+          <a class="nav-link" href="{{ url_for('main.consultation')}}">Book a Consultation</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Energy Tracker</a>
+          <a class="nav-link" href="{{ url_for('main.energy_tracker') }}">Energy Tracker</a>
         </li>
       </ul>
 
