--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -149,3 +149,13 @@ footer {
     box-shadow: 0 2px 6px rgba(0,0,0,0.08);
     margin-bottom: 1rem;
 }
+
+
+.content_dis {
+    display: none;  /* hide all content initially */
+
+    }
+li {
+    cursor: pointer;
+    margin: 5px 0;
+}
