--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -82,9 +82,12 @@
         </footer>
 
     </div>
-    <!-- Load your JS after the footer -->
-    <script src="static\js\policy.js"></script>
-    <script src="static\js\cookies.js"></script>
+    <!-- Base JS -->
+    <script src="{{ url_for('static', filename='js/policy.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/cookies.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Page-specific scripts -->
+    {% block scripts %}{% endblock %}
 </body>
 </html>
