--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -42,7 +42,7 @@
           <a class="nav-link" href="{{ url_for('main.green_products')}}">Green Products</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('main.calculate') }}">Carbon Calculator</a>
+          <a class="nav-link" href="{{ url_for('main.carbon_calculator') }}">Carbon Calculator</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('main.consultation')}}">Book a Consultation</a>
