--- a/app/templates/carbon_calculator.html
+++ b/app/templates/carbon_calculator.html
@@ -4,7 +4,7 @@
     <h1>Calculate Carbon Footprint</h1>
     <div class="container mt-4">
         <h1 class="mb-4">Booking Form</h1>
-        <form action="{{ url_for('main.calculate') }}" method="post" novalidate>
+        <form action="{{ url_for('main.carbon_calculator') }}" method="post" novalidate>
             {{ form.csrf_token }}
             <div class="mb-3">
                 {{ form.car_emission.label(class="form-label") }}
