--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -41,7 +41,7 @@
 
                             <div class="d-flex justify-content-between">
                                 <small>New user? <a href="{{ url_for('main.register') }}">Click to Register!</a></small>
-                                <small>Forgot? <a href="{{ url_for('main.reset_password') }}">Click to Reset</a></small>
+                                <small>Forgot? <a href="{{ url_for('main.reset_password_request') }}">Click to Reset</a></small>
                             </div>
 
                         </form>
