--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -1,8 +1,23 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
-  <h1>Reset Password</h1>
-  <p>If you forgot your password, enter your account email on this page to receive reset instructions.</p>
-  <p>(This is a placeholder page — implement email reset flow as needed.)</p>
-  <p><a href="{{ url_for('main.login_route') }}">Back to sign in</a></p>
+    <h1>Reset Your Password</h1>
+    <form action="" method="post">
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.password.label }}<br>
+            {{ form.password(size=32) }}<br>
+            {% for error in form.password.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.password2.label }}<br>
+            {{ form.password2(size=32) }}<br>
+            {% for error in form.password2.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>{{ form.submit() }}</p>
+    </form>
 {% endblock %}
