--- a/app/templates/carbon_calculator.html
+++ b/app/templates/carbon_calculator.html
@@ -7,6 +7,14 @@
         <form action="{{ url_for('main.carbon_calculator') }}" method="post" novalidate>
             {{ form.csrf_token }}
             <div class="mb-3">
+                {{ form.name.label(class="form-label") }}
+                {{ form.name(class="form-control", placeholder="Enter your name") }}
+                {% if form.name.errors %}
+                    <div class="invalid-feedback d-block">{{ form.name.errors[0] }}</div>
+                {% endif %}
+            </div>
+
+            <div class="mb-3">
                 {{ form.car_emission.label(class="form-label") }}
                 {{ form.car_emission(class="form-control", type="number") }}
                 {% if form.car_emission.errors %}
@@ -26,8 +34,5 @@
                 {{ form.submit(class="btn btn-success") }}
             </div>
         </form>
-        <div class="d-flex gap-2 py-3">
-            <a href="{{ url_for('main.home') }}" class="btn btn-primary">Cancel</a>
-        </div>
     </div>
 {% endblock %}
