--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,6 +50,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('main.energy_tracker') }}">Energy Tracker</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('main.footprint_dashboard') }}">Footprint Dashboard</a>
+        </li>
       </ul>
 
       <!-- Right Side (Account) -->
