--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,7 +2,7 @@
 {% import "bootstrap_wtf.html" as wtf %}
 
 {% block content %}
-    <h1>Sign In</h1>
+    <h1>Login</h1>
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card shadow-sm my-3">
