--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -89,7 +89,7 @@
     <script src="{{ url_for('static', filename='js/policy.js') }}"></script>
     <script src="{{ url_for('static', filename='js/cookies.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Page-specific scripts -->
     {% block scripts %}{% endblock %}
 </body>
