--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -35,7 +35,17 @@
     height: 20px;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), transparent);
 }
- 
+
+.delete-btn {
+    width: 100%;
+    margin-top: 0;
+    padding: 0;
+    background-color: transparent;
+    border-radius: 0px;
+    box-shadow: 0 0 0 rgba(0, 0, 0, 0.1); 
+    overflow: hidden;
+}
+
 /* General Form Styling */
 form {
     width: 100%;
