--- a/app/templates/carbon_calculator.html
+++ b/app/templates/carbon_calculator.html
@@ -29,6 +29,14 @@
                 {% endif %}
             </div>
 
+            <div class="mb-3">
+                {{ form.date.label(class="form-label") }}
+                {{ form.date(class="form-control", type="date") }}
+                {% if form.date.errors %}
+                    <div class="invalid-feedback d-block">{{ form.date.errors[0] }}</div>
+                {% endif %}
+            </div>
+
             <div class="d-flex gap-2">
                 {{ form.submit(class="btn btn-success") }}
             </div>
