--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,6 +55,7 @@
                                     <li><a class="dropdown-item" href="{{ url_for('main.admin_manage_users') }}">Manage Users</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                 {% endif %}
+                                <li><a class="dropdown-item" href="{{ url_for('main.settings') }}">Settings</a></li>
                                 <li><a class="dropdown-item" href="{{ url_for('main.logout_route') }}">Logout</a></li>
                             </ul>
                         </div>
